--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -23,11 +23,13 @@
     <!--header inicio-->
     <div class="header">
         <div class="container">
-            <h1 class="titulo">São Paulo FC</h1>
+            <a href="index.html">
+                <h1 class="titulo">São Paulo FC</h1>
+            </a>
             <ul class="navbar">
                 <li>
                     <a href="./index.html">
-                        Inicial
+                        Home
                     </a>
                 </li>
                 <li>
@@ -61,15 +63,16 @@
                     <input id="nome_input" type="text" placeholder="Seu nome">
 
                     <div class="tipo_campo">E-mail:</div>
-                    <input id="email_input" type="text" placeholder="meuemail@provedor.com">
+                    <input id="email_input" type="text" placeholder="meuemail@provedor.com">                   
 
                     <div class="tipo_campo">Senha:</div>
                     <input id="senha_input" type="password" placeholder="******">
 
                     <div class="tipo_campo">Confirmação da Senha:</div>
                     <input id="confirmacao_senha_input" type="password" placeholder="******">
+                    
 
-                  <a href="login.html"> <button class="btn" onclick="cadastrar()">Cadastrar</button></a>
+                    <a href="login.html"> <button class="btn" onclick="cadastrar()">Cadastrar</button></a>
 
                 </div>
             </div>
@@ -79,11 +82,7 @@
     <!--footer inicio-->
     <div class="footer">
         <div class="container">
-            <h4>Feito com amor por um aluno &hearts; SPTech &copy; 2022
-                <br>
-                <span class="version">
-                    v1.0.0
-                </span>
+            <h4>By Washington Farias SPTech-2022
             </h4>
         </div>
     </div>
@@ -138,7 +137,7 @@
                 setTimeout(() => {
                     window.location = "login.html";
                 }, "2000")
-                
+
                 limparFormulario();
             } else {
                 throw ("Houve um erro ao tentar realizar o cadastro!");
