--- a/site/public/index.html
+++ b/site/public/index.html
@@ -16,7 +16,7 @@
             <h1>São Paulo FC</h1>
             <ul class="navbar">
                 <li id="aqui">Home</li>
-                <li class=""><a href="Quem-somos-nós.html">Historia</a></li>
+                <li class=""><a href="historia.html">Historia</a></li>
                 <li>|</li>
                 <li><a href="Login.html">Login</a></li>
                 <li><a href="Cadastro.html">Cadastro</a></li>
@@ -129,10 +129,13 @@
             <img src="assets/mapa-atualizado-setores-do-morumbi-2022.png    " alt="">
         </div>
     </div>
+    <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.118331300193!2d-46.72227888506989!3d-23.60008878466368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce56c31b1fe649%3A0x7d134f4dfc6618c2!2sEst%C3%A1dio%20C%C3%ADcero%20Pompeu%20de%20Toledo!5e0!3m2!1spt-BR!2sbr!4v1669126618409!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:3px solid red;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 
     <div class="footer">
         <div class="container">
-            <h4>Feito com amor por um aluno &hearts; SPTech &copy; 2022</h4>
+            <h4>By Washington Farias SPTech-2022</h4>
         </div>
     </div>
 
